is it about the content

--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
   </head>
   <body>
 
-  <div id="result"></div>
-
-  <script language="javascript">
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', '/foo', false);
-    xhr.send();
-    document.getElementById('result').textContent = xhr.responseText;
-  </script>
+    result
   </body>
 </html>
