Revert "is it about the content"
This reverts commit 5c944dc0e75bf81108b0f66bb30d281b7be5ecd9.

IT IS!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
 
-    result
+  <div id="result"></div>
+
+  <script language="javascript">
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', '/foo', false);
+    xhr.send();
+    document.getElementById('result').textContent = xhr.responseText;
+  </script>
   </body>
 </html>
