is it about the xhr

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
   <div id="result"></div>
 
   <script language="javascript">
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', '/foo', false);
-    xhr.send();
-    document.getElementById('result').textContent = xhr.responseText;
+    document.getElementById('result').textContent = 'result';
   </script>
   </body>
 </html>
