--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <div id="result"></div>
 
   <script language="javascript">
-    document.getElementById('result').textContent = 'result';
+    window.onload = function() {
+      var xhr = new XMLHttpRequest();
+      xhr.open('GET', '/foo', false);
+      xhr.send();
+      document.getElementById('result').textContent = xhr.responseText;
+    };
   </script>
   </body>
 </html>
