--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <script language="javascript">
     window.onload = function() {
       var xhr = new XMLHttpRequest();
-      xhr.open('GET', '/foo', false);
+      xhr.open('GET', '/foo', true);
+      xhr.onload = () => document.getElementById('result').textContent = xhr.responseText;
       xhr.send();
-      document.getElementById('result').textContent = xhr.responseText;
     };
   </script>
   </body>
