--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   <div id="result"></div>
 
   <script language="javascript">
-    window.onload = function() {
-      var xhr = new XMLHttpRequest();
-      xhr.open('GET', '/foo', true);
-      xhr.onload = () => document.getElementById('result').textContent = xhr.responseText;
-      xhr.send();
-    };
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', '/foo.txt', false);
+    xhr.send();
+    document.getElementById('result').textContent = xhr.responseText;
   </script>
   </body>
 </html>
