--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script language="javascript">
     var xhr = new XMLHttpRequest();
-    xhr.open('GET', '/index.html', false);
+    xhr.open('GET', '/sync-xhr/index.html', false);
     xhr.send();
     document.getElementById('result').textContent = xhr.responseText;
   </script>
